--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "hubot-slack": "~2.0.4",
     "redis": "0.8.4",
     "scraper": "0.0.9",
-    "clark": "0.0.5",
     "nodepie": "0.5.0",
     "cheerio": "0.7.0",
     "textspark": "0.0.4",
@@ -34,8 +33,7 @@
     "htmlparser": "1.7.6",
     "soupselect": "0.2.0",
     "underscore": "1.3.3",
-    "underscore.string": "2.3.0",
-    "wolfram": "0.2.2"
+    "underscore.string": "2.3.0"
   },
   "engines": {
     "node": ">= 0.8.x",
